# starterhub-rust-stack

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  clippy.toml  codecov.yml  committed.toml  deny.toml  docker-compose.yaml  justfile  lefthook.yml  release-please-config.json  rust-toolchain.toml  rustfmt.toml
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yaml  ci-update.yaml  ci.yaml  pr.yaml  release-please.yaml  release.yaml
api/: Cargo.toml
api/src/: error.rs  extract.rs  lib.rs  server.rs  state.rs
api/src/dto/: mod.rs
api/src/entity/: mod.rs
api/src/handler/: mod.rs
api/src/middleware/: body_limit.rs  catch_panic.rs  mod.rs  request_id.rs  timeout.rs  trace.rs
api/src/router/: mod.rs
api/src/service/: mod.rs  mutation.rs  query.rs
api/tests/: error.rs  request_id.rs  router.rs  server.rs
common/: Cargo.toml
common/src/: config.rs  lib.rs  telemetry.rs
common/src/infrastructure/: mod.rs  postgresql.rs
common/tests/: config.rs  postgresql.rs  telemetry_debug.rs  telemetry_default.rs
cron/: Cargo.toml
cron/src/: error.rs  lib.rs  server.rs  state.rs
cron/src/job/: hello.rs  mod.rs
cron/tests/: server.rs
entity/: Cargo.toml
entity/src/: lib.rs  prelude.rs
migration/: Cargo.toml
migration/src/: lib.rs  main.rs
migration/src/source/: mod.rs
migration/tests/: migrator.rs
src/: main.rs
