[workspace]
members  = [".", "api", "common", "cron", "entity", "migration"]
resolver = "3"

[workspace.package]
edition      = "2024"
license      = "MIT"
publish      = false
rust-version = "1.97"
version      = "0.1.0" # x-release-please-version

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code  = "forbid"

[workspace.lints.clippy]
missing_docs_in_private_items = "warn"

[workspace.dependencies]
api       = { path = "api" }
common    = { path = "common" }
cron      = { path = "cron" }
entity    = { path = "entity" }
migration = { path = "migration" }

anyhow             = "1"
async-trait        = "0.1"
axum               = "0.8"
config             = { version = "0.15", default-features = false, features = ["json"] }
dotenvy            = "0.15"
sea-orm            = "2.0"
sea-orm-migration  = "2.0"
secrecy            = { version = "0.10", features = ["serde"] }
serde              = "1"
serde_json         = "1"
thiserror          = "2"
tokio              = "1"
tokio-cron-scheduler = "0.15"
tokio-util         = "0.7"
tower              = "0.5"
tower-http         = "0.7"
tracing            = "0.1"
tracing-subscriber = "0.3"

[package]
edition.workspace      = true
license.workspace      = true
name                   = "ipam"
publish.workspace      = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[dependencies]
anyhow             = { workspace = true }
api                = { workspace = true }
common             = { workspace = true }
cron               = { workspace = true }
migration          = { workspace = true }
tokio              = { workspace = true, features = ["full"] }
tokio-util         = { workspace = true }
tracing            = { workspace = true }
