[workspace]
members  = [".", "api", "common", "cron", "entity", "migration"]
resolver = "3"

# `version` is intentionally NOT part of [workspace.package]: release-please's
# rust strategy can only rewrite literal `version = "x.y.z"` strings, so every
# crate declares its own version and the release PR bumps them in lockstep.
[workspace.package]
edition      = "2024"
license      = "MIT"
publish      = false
rust-version = "1.97"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code  = "forbid"

[workspace.lints.clippy]
missing_docs_in_private_items = "warn"

[workspace.dependencies]
api       = { path = "api" }
common    = { path = "common" }
cron      = { path = "cron" }
entity    = { path = "entity" }
migration = { path = "migration" }

anyhow             = "1"
async-trait        = "0.1"
axum               = "0.8"
config             = { version = "0.15", default-features = false, features = ["json"] }
dotenvy            = "0.15"
sea-orm            = "2.0"
sea-orm-migration  = "2.0"
secrecy            = { version = "0.10", features = ["serde"] }
serde              = "1"
serde_json         = "1"
thiserror          = "2"
tokio              = "1"
tokio-cron-scheduler = "0.15"
tokio-util         = "0.7"
tower              = "0.5"
tower-http         = "0.7"
tracing            = "0.1"
tracing-subscriber = "0.3"
utoipa             = "5"
utoipa-swagger-ui  = "9"

[package]
edition.workspace      = true
license.workspace      = true
name                   = "starterhub-rust-stack"
publish.workspace      = true
rust-version.workspace = true
version                = "0.5.0"

[lints]
workspace = true

[dependencies]
anyhow             = { workspace = true }
api                = { workspace = true }
common             = { workspace = true }
cron               = { workspace = true }
migration          = { workspace = true }
tokio              = { workspace = true, features = ["full"] }
tokio-util         = { workspace = true }
tracing            = { workspace = true }
