[package]
edition.workspace      = true
license.workspace      = true
name                   = "api"
publish.workspace      = true
rust-version.workspace = true
version.workspace      = true

[lib]
name = "api"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow     = { workspace = true }
axum       = { workspace = true, features = ["macros", "tokio"] }
entity     = { workspace = true }
serde      = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true, features = ["macros", "net", "rt-multi-thread"] }
tower      = { workspace = true }
tower-http = { workspace = true, features = ["catch-panic", "request-id", "trace"] }
tracing    = { workspace = true }

[dependencies.sea-orm]
features = [
    "debug-print",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    # "sqlx-mysql",
    # "sqlx-sqlite",
]
workspace = true
