[package]
edition.workspace      = true
license.workspace      = true
name                   = "api"
publish.workspace      = true
rust-version.workspace = true
version                = "0.7.0"

[lib]
name = "api"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow     = { workspace = true }
axum       = { workspace = true, features = ["macros", "tokio"] }
entity     = { workspace = true }
serde      = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true, features = ["macros", "net", "rt-multi-thread"] }
tower      = { workspace = true, features = ["timeout"] }
tower-http = { workspace = true, features = ["catch-panic", "request-id", "trace"] }
tracing    = { workspace = true }
utoipa     = { workspace = true, features = ["axum_extras"] }

# `vendored` embeds the Swagger UI assets at compile time instead of having
# the build script download them from GitHub: keeps the Docker build
# reproducible and free of ad-hoc network access.
utoipa-swagger-ui = { workspace = true, features = ["axum", "vendored"] }

[dependencies.sea-orm]
features = [
    "debug-print",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    # "sqlx-mysql",
    # "sqlx-sqlite",
]
workspace = true

[dev-dependencies]
# `io-util` and `sync` serve the real-server test: a raw TCP client and a
# oneshot channel driving the graceful shutdown.
tokio = { workspace = true, features = ["io-util", "macros", "rt-multi-thread", "sync", "time"] }
tower = { workspace = true, features = ["util"] }

# Test subscriber: log statements only fully evaluate under an active
# subscriber, and the tests assert those paths execute without panicking.
tracing-subscriber = { workspace = true }

# `mock` provides the in-memory database the integration tests hand to
# `AppState`, so the HTTP surface is testable without a live PostgreSQL.
[dev-dependencies.sea-orm]
features = ["mock"]
workspace = true
