[package]
edition.workspace      = true
license.workspace      = true
name                   = "entity"
publish.workspace      = true
rust-version.workspace = true
version                = "1.1.1"

[lib]
name = "entity"
path = "src/lib.rs"

[lints]
workspace = true

# No dependencies while the crate ships empty: dead placeholder deps
# would accumulate invisibly (nothing gates unused dependencies). The
# first real entity brings `sea-orm` (+ `serde` with `derive`) back from
# the workspace table, and re-links `entity` in the consuming crates.
[dependencies]
