[package]
edition.workspace      = true
license.workspace      = true
name                   = "migration"
publish.workspace      = true
rust-version.workspace = true
version                = "1.1.0"

[lib]
name = "migration"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
common = { workspace = true }
tokio  = { workspace = true, features = ["macros", "rt-multi-thread"] }

[dependencies.sea-orm-migration]
features = [
    # Enable following runtime and db backend features if you want to run migration via CLI
    "runtime-tokio-rustls",
    "sqlx-postgres",
]
workspace = true
